kubernetes/main/apps/flux-system/addons/app/webhooks/github/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Flux Webhook
    gethomepage.dev/group: Services
    gethomepage.dev/icon: flux-cd
    gethomepage.dev/name: Flux
    gethomepage.dev/pod-selector: "app=notification-controller"
spec:
  ingressClassName: external
  rules:
    - host: flux-webhook.${SECRET_DOMAIN}
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
